test/performance/assets/networkpolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scale-test-networkpolicy-template
  namespace: antrea-scale-ns-template-3f1237-0
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          namespace: antrea-scale-ns-3f1237-0
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app-1: scale-1
  policyTypes:
  - Ingress
