test/performance/assets/networkpolicy/np-2-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-2
  namespace: demox-1-ybxoeh
spec:
  egress:
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 20.0.0.0/8
        - ipBlock:
            cidr: 10.172.51.93/32
        - podSelector:
            matchLabels:
              app-1: scale-1
        - podSelector:
            matchLabels:
              app: testpod
  podSelector:
    matchLabels:
      app-1: scale-1
  policyTypes:
    - Egress
