test/performance/assets/networkpolicy/np-3-ingress-clientPod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-3
  namespace: demox-1-ybxoeh
spec:
  ingress:
    - from:
        - ipBlock:
            cidr: 100.0.0.0/8
        - ipBlock:
            cidr: 20.0.0.0/8
  podSelector:
    matchLabels:
      app: testpod
  policyTypes:
    - Ingress
