test/performance/assets/networkpolicy/np-4-egress-clientPod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-4
  namespace: demox-1-ybxoeh
spec:
  egress:
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 10.172.51.93/32
  podSelector:
    matchLabels:
      app: testpod
  policyTypes:
    - Egress
